fixed text alignment and colour in Donorlist.tsx

--- a/src/Admin/Donorlist.css
+++ b/src/Admin/Donorlist.css
@@ -45,4 +45,8 @@
     margin-top: 50px;
     margin-bottom: 50px;
   }
-  
+
+  .h2{
+    color: #ffffff;
+    text-align: center;
+  }
